--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "sneaker-store-backend",
+  "name": "kickskart-backend",
   "version": "1.0.0",
-  "description": "Backend for the sneaker store application",
+  "description": "Backend for the KicksKart application",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -11,15 +11,15 @@
   "author": "Ashutosh Tiwari",
   "license": "ISC",
   "dependencies": {
-    "bcryptjs": "^2.4.3",
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.0",
-    "mongoose": "^7.1.0",
-    "validator": "^13.9.0"
+    "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.15.1",
+    "validator": "^13.15.15"
   },
   "devDependencies": {
     "env-cmd": "^10.1.0",
-    "nodemon": "^2.0.22"
+    "nodemon": "^3.1.10"
   }
 }
